--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
-            <img class="banner-profile-pic" src="./images/chrabon.png" alt="">
+            <img class="banner-profile-pic" src="./images/hardy.png" alt="">
            </div>
     </header>
     <main>
