--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-dev-portfolio</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="https://kit.fontawesome.com/0d7b195d3f.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -21,8 +22,10 @@
                 <h4 class="banner-grettings dark-2">Hi, I am</h4>
                 <h1 class="banner-tittle">Chrabon Dey</h1>
                 <p class="banner-description dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <div class="banner-button">
+                    <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                 <button class="btn-contact"><i class="fa-solid fa-phone"></i>  Contact</button>
+                </div>
             </div>
             <img class="banner-profile-pic" src="./images/hardy.png" alt="">
            </div>
@@ -58,23 +61,31 @@
             <div class="skills-container">
                 <div class="skill">
                     <img src="./images/icons/js.png" alt="">
+                   <div class="skill-content">
                     <h4 class="skill-tittle">Vanilla JavaScript</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                    <p class="skill-description dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                   </div>
                 </div>
                 <div class="skill">
                     <img src="./images/icons/react.png" alt="">
-                    <h4 class="skill-tittle">React</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <div class="skill-content">
+                        <h4 class="skill-tittle">React</h4>
+                    <p class="skill-description dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
                 </div>
                 <div class="skill">
                     <img src="./images/icons/nodejs.png" alt="">
+                   <div class="skill-content">
                     <h4 class="skill-tittle">Node.js</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                   </div>
                 </div>
                 <div class="skill">
                     <img src="./images/icons/mongo.png" alt="">
-                    <h4 class="skill-tittle">MongoDB</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <div class="skill-content">
+                        <h4 class="skill-tittle">MongoDB</h4>
+                    <p class="skill-description dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -82,55 +93,55 @@
             <h3 class="section-tittle text-center">A summary of My Resume</h3>
              <div class="resume-container">
                 <div class="resume-column">
-                    <h3 class="resume-column-tittle">My Education</h3>
+                    <h3 class="resume-column-tittle dark-2">My Education</h3>
                     <div class="experience">
-                        <h4 class="experience-tittle">Master in Computer Engineering</h4>
-                        <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
-                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                        <h4 class="experience-tittle dark-2">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-tittle dark-3">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4 class="experience-tittle">Master in Computer Engineering</h4>
-                        <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
-                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                        <h4 class="experience-tittle dar-2">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-tittle dark-3">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4 class="experience-tittle">Master in Computer Engineering</h4>
-                        <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
-                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                        <h4 class="experience-tittle dark-2">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-tittle dark-3">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
                     </div>
                 </div>
                 <div class="resume-column">
-                    <h3 class="resume-column-tittle">My Experience</h3>
+                    <h3 class="resume-column-tittle dark-2">My Experience</h3>
                     <div class="experience">
-                        <h4 class="experience-tittle">Sr. Font End Developer</h4>
-                        <h5 class="experience-sub-tittle">Apple Inc / 2020 - Current</h5>
-                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                        <h4 class="experience-tittle dark-2">Sr. Font End Developer</h4>
+                        <h5 class="experience-sub-tittle dark-3">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4 class="experience-tittle">Sr. Font End Developer</h4>
-                        <h5 class="experience-sub-tittle">Apple Inc / 2020 - Current</h5>
-                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                        <h4 class="experience-tittle dark-2">Sr. Font End Developer</h4>
+                        <h5 class="experience-sub-tittle dark-3">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4 class="experience-tittle">Sr. Font End Developer</h4>
-                        <h5 class="experience-sub-tittle">Apple Inc / 2020 - Current</h5>
-                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                        <h4 class="experience-tittle dark-2">Sr. Font End Developer</h4>
+                        <h5 class="experience-sub-tittle dark-3">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
                     </div>
                 </div>
 
              </div>
              <div class="text-center resume-download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
              </div>
         </section>
     </main>
@@ -138,7 +149,7 @@
         <div class="footer-column">
                <h3 class="section-tittle">Lets Connect</h3>
                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-               <div>
+               <div class="footer-img">
                   <a href=""><img src="./images/icons/facebook.png" alt=""></a>
                   <a href=""><img src="./images/icons/twitter.png" alt=""></a>
                   <a href=""><img src="./images/icons/insta.png" alt=""></a>
@@ -149,7 +160,7 @@
             <form action="">
                 <input type="text" name="" id="" placeholder="Your name">
                 <input type="email" name="" id="" placeholder="Your email">
-                <textarea name="" id="" cols="30" rows="30" placeholder="Message"></textarea>
+                <textarea name="" id="" cols="89" rows="45" placeholder="Message"></textarea>
                 <input class="btn-primary" type="submit" value="Submit">
             </form>
         </div>
